--- a/XmlCleaner/packages.config
+++ b/XmlCleaner/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="4.2.0.8783" targetFramework="net45" />
+  <package id="MahApps.Metro" version="0.10.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
