--- a/RoslynPerspective/packages.config
+++ b/RoslynPerspective/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
@@ -11,4 +12,12 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
+  <package id="underscore.js" version="1.4.4" targetFramework="net40" />
 </packages>
