--- a/SyntaxLearner/packages.config
+++ b/SyntaxLearner/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="4.3.1.9430" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="MahApps.Metro" version="0.10.1.1" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="4.1.27.1" targetFramework="net45" />
   <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
